--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: bhanu@07
+  password: 12345
   socket: /var/run/mysqld/mysqld.sock
 
 development:
